[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aio_trader"
version = "0.1.0"
author = "Benny Thadikaran"
description = "Async Python library for various Indian stock brokers."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "aiodns==3.2.*",
  "aiohttp==3.9.*",
  "Brotli==1.1.*",
  "throttler==1.2.*",
]
keywords = ["kite", "kiteconnect", "zerodha", "algo-trading", "stock-market", "historical-data", "intraday-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/BennyThadikaran/aio-trader/issues"
Issues = "https://github.com/BennyThadikaran/aio-trader"
[tool.ruff]
target-version = "py38"
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear (likely bugs)
  "D",   # pydocstyle (PEP 257)
  "E",   # pycodestyle errors (PEP 8)
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import sorting)
  "N",   # pep8-naming (snake_case, PascalCase)
  "SIM", # flake8-simplify
  "UP",  # pyupgrade (modern Python)
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  "D203", # incompatible with D211
  "D213", # incompatible with D212
]
lint.pydocstyle.convention = "pep257"
