[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aio-trader"
version = "0.2.0-beta"
description = "Async Python library for various Indian stock brokers."
readme = "README.md"
keywords = [ "algo-trading", "historical-data", "intraday-data", "kite", "kiteconnect", "stock-market", "zerodha" ]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiodns==4",
  "aiohttp==3.9.5",
  "brotli==1.1",
  "throttler==1.2.3",
]
optional-dependencies.docs = [
  "furo==2025.9.25",
  "sphinx==8.2.3",
]
urls.Homepage = "https://github.com/BennyThadikaran/aio-trader/issues"
urls.Issues = "https://github.com/BennyThadikaran/aio-trader"
author = "Benny Thadikaran"

[tool.ruff]
target-version = "py38"
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
lint.select = [
  "B",   # flake8-bugbear (likely bugs)
  "D",   # pydocstyle (PEP 257)
  "E",   # pycodestyle errors (PEP 8)
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import sorting)
  "N",   # pep8-naming (snake_case, PascalCase)
  "SIM", # flake8-simplify
  "UP",  # pyupgrade (modern Python)
  "W",   # pycodestyle warnings
]
lint.ignore = [
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  "D203", # incompatible with D211
  "D213", # incompatible with D212
]
lint.pydocstyle.convention = "pep257"
